# CLIPink

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
analysis/: after_train.py  collect_results.py
configs/: main_weighted.yaml
configs/experiments/: full.yaml  no_edge.yaml  no_gate.yaml  no_ink.yaml  no_l2.yaml  no_layered_init.yaml  no_sparse.yaml  softline.yaml  strokes_48.yaml  strokes_96.yaml
configs/suites/: ablation_core.yaml  ablation_extended.yaml
runs_strokes/_reports/: results.csv  results_summary.csv
runs_strokes/_reports/post/: meta_camel.json  metrics_camel.csv
scripts/: run_batch.py  train.py
src/inkproj/: __init__.py
src/inkproj.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/inkproj/cli/: __init__.py  run_batch.py  train.py
src/inkproj/core/: __init__.py  compose.py  config.py  io.py  losses.py  metrics.py  params.py
src/inkproj/model/: __init__.py  ink_stroke.py
src/inkproj/pipelines/: __init__.py  train_weighted.py
